# boggle

./: .gitignore  Changelog  INSTALL  MANIFEST  Makefile  Makefile.in  README  batch.c  batch.h  boggle.6  boggle.c  boggle.h  configure  configure.in  cube.c  cube.h  dbuild.c  dbuild.h  dcat.c  dict-doc.txt  dict.c  dict.doc  dict.h  genutil.c  genutil.h  input.c  input.h  output.c  output.h  play.c  play.h  score.c  score.h  timer.c  timer.h  wordlist.c  wordlist.h  words.c  words.h
